tests/parse-errors/unexpected_token_in_block.sysc
func foo()
  while true
    while true
      func bar()
